# jaxstro

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  STATUS.md  pyproject.toml
.claude-work/: JAXSTRO_PARAMS_COMPLETE.md
.github/workflows/: tests.yml
docs/: index.md  myst.yml
docs/00-getting-started/: index.md
docs/10-theory/: autodiff.md  bsplines.md  cumulative-trapz.md  distributions.md  geometry.md  grids.md  index.md  interpolation.md  linear-algebra.md  meshes.md  ode.md  operators.md  optimization.md  quadrature.md  quantities.md  random.md  regular-grid.md  rootfinding.md  special-functions.md
docs/20-architecture/: atmosphere-capabilities.md  index.md  provenance.md  quantity-system.md  science-general-vision.md  spectra-data-architecture.md
docs/30-decisions/: 0001-thin-foundation-posture.md  0002-adopt-equinox-foundation.md  0003-standalone-uv-hatchling-project.md  0004-apache-2-0-license.md  0005-diataxis-docs-with-adr-meta.md  0006-build-own-quantity-not-unxt.md  0007-cgs-as-default-units.md  0008-reject-ift-from-core.md  0009-jaxstro-params-selective-inference.md  0010-ecosystem-config-architecture.md  0011-apache-2-0-standardization.md  0012-ecosystem-multi-package-maintenance.md  index.md
docs/40-api/: index.md
docs/50-howto/: bosz-data-processing.md  index.md  newera-data-processing.md  quantity-migration.md  sonora-data-processing.md  tlusty-data-processing.md
docs/60-validation/: index.md
docs/90-development-log/: index.md  numerical-methods-roadmap.md
docs/95-release/: index.md
docs/99-bibliography/: index.md  references.bib
docs/plans/: 2026-06-17-jaxstro-consolidation-and-release-strategy.md  2026-06-17-jaxstro-params-design.md  2026-06-17-jaxstro-params-implementation.md  2026-06-17-jaxstro-phase-b-implementation.md  2026-06-17-jaxstro-phase-c-design.md  2026-06-17-jaxstro-phase-c-implementation.md  2026-06-20-spectra-hybrid-architecture.md  2026-06-22-jaxstro-numerics-roadmap.md  2026-06-23-jaxstro-quantity-design.md  2026-06-23-jaxstro-quantity-implementation.md
scripts/: check.sh  convert_bosz_resampled.py  convert_newera_lowres.py  convert_sonora_2024.py  convert_tlusty_flux.py  report_atmosphere_coverage.py
src/jaxstro/: README.md  __init__.py  astrometry.py  constants.py  coords.py  geometry.py  jaxconfig.py  provenance.py  units.py
src/jaxstro/atmospheres/: __init__.py  acquisition.py  bosz.py  coverage.py  library.py  newera.py  overlap.py  sonora.py  spectra.py  tlusty.py
src/jaxstro/numerics/: __init__.py  autodiff.py  checks.py  compensated.py  distributions.py  grids.py  integration.py  interpolation.py  linear_algebra.py  meshes.py  ode.py  operators.py  optimization.py  quadrature.py  random.py  regular_grid.py  rng.py  rootfinding.py  sampling.py  special.py  splines.py  stats.py  types.py
src/jaxstro/params/: __init__.py  parameterization.py  transforms.py
src/jaxstro/quantity/: __init__.py  astro.py  bases.py  constants.py  dimensions.py  equivalencies.py  errors.py  math.py  parser.py  quantity.py  registry.py  serialization.py  unit.py  units.py
src/jaxstro/spatial/: __init__.py  grid.py  morton.py  neighbor.py
src/jaxstro/testing/: __init__.py  contracts.py  diagnostics.py  grad_audit.py  ratchet.py  reports.py
tests/: README.md  __init__.py  conftest.py  test_astrometry.py  test_constants.py  test_coords.py  test_grad_audit.py  test_jaxconfig.py  test_linear_algebra.py  test_numerics.py  test_photometric.py  test_quadrature.py  test_rng.py  test_sampling.py  test_spatial.py  test_units.py
tests/integration/: test_grad_audit.py  test_integration_parity.py  test_params_optax.py
tests/unit/: test_atmospheres.py  test_atmospheres_acquisition.py  test_atmospheres_bosz.py  test_atmospheres_coverage.py  test_atmospheres_library.py  test_atmospheres_newera_backend.py  test_atmospheres_overlap.py  test_atmospheres_sonora.py  test_atmospheres_spectra.py  test_atmospheres_tlusty.py  test_autodiff.py  test_bosz_conversion_script.py  test_checks.py  test_constants.py  test_coords.py  test_distributions.py  test_geometry.py  test_grids.py  test_interpolation_shape_preserving.py  test_jaxconfig.py  test_linear_algebra.py  test_meshes.py  test_newera_conversion_script.py  test_numerics.py  test_ode.py  test_operators.py  test_optimization.py  test_params_parameterization.py  test_params_transformed.py  test_params_transforms.py  test_photometric.py  test_provenance.py  test_quadrature.py  test_quantity_arithmetic.py  test_quantity_bases.py  test_quantity_constants.py  test_quantity_dimensions.py  test_quantity_equivalencies.py  test_quantity_import_surface.py  test_quantity_math.py  (+17 more)
tests/unit/_ratchet_fixtures/: fixture_collect_target.py
tests/unit/fixtures/newera_lowres/: PHOENIX-NewEraV3-GAIA-DR4-SPECTRA.Z-0.5.txt  PHOENIX-NewEraV3-LowRes-SPECTRA.Z+0.5.txt  PHOENIX-NewEraV3-LowRes-SPECTRA.Z-0.5.alpha=0.4.txt
tests/validation/: test_atmospheres_local_artifacts.py  test_atmospheres_spectra.py  test_grad_checks.py  test_quantity_jax_transforms.py  test_quantity_math_gradients.py  test_suite_structure.py
validation/: validate_params.py
