[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxstro"
version = "0.1.0"
description = "Core utilities for the jaxstro differentiable astrophysics ecosystem (units, constants, helpers)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Anna Rosen", email = "alrosen@sdsu.edu" }
]
keywords = ["jax", "astrophysics", "units", "constants", "coordinates", "numerics", "differentiable"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Operating System :: OS Independent",
]

# Keep runtime deps minimal here; add more when core actually needs them.
dependencies = [
  "jax>=0.10.1",
  "jaxlib>=0.10.1",
  "equinox>=0.13.8",
  "jaxtyping>=0.3.11",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
]
ml = [
  "optax>=0.2.8",
  "numpyro>=0.21.0",
]
data = [
    "numcodecs>=0.16.5",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "zarr>=3.1.6",
]

[project.urls]
Homepage = "https://github.com/jaxstro/jaxstro"
Source = "https://github.com/jaxstro/jaxstro.git"
Issues = "https://github.com/jaxstro/jaxstro/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jaxstro"]

# -----------------------
# uv configuration
# -----------------------
# Dev tooling declared via PEP 735 dependency groups (uv installs the `dev`
# group by default). Mirrors the [project.optional-dependencies] dev extra.
[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

# -----------------------
# Ruff configuration
# -----------------------
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]
fix = true

[tool.ruff.lint]
# Start light; you can tighten later.
select = ["E", "F", "I"]  # pyflakes, pycodestyle errors, isort
ignore = [
  "E203",  # whitespace before ':' (black compat)
  "E501",  # line length – rely on formatter / your judgment
  "E741",  # ambiguous variable name (l is standard for galactic longitude)
  "F722",  # syntax error in forward annotation (jaxtyping uses "N 3" patterns)
  "F821",  # undefined name (jaxtyping pattern variables like N, Array)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------
# mypy configuration
# -----------------------
[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
packages = ["jaxstro"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_unused_configs = true
strict_optional = true
# You can turn on full strictness later; this is a sane starting point.

# -----------------------
# pytest (optional but handy)
# -----------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: fast isolated unit tests (functional correctness, shapes, bounds, round-trips)",
    "integration: cross-module / JAX-transform tests (jit, grad, vmap, parity)",
    "validation: scientific validation (FD-vs-AD numerical truth, convergence)",
    "slow: expensive tests excluded from the fast gate",
]
